Default PermGen space is often too low (depends on OS/JVM)