@@ -27,9 +27,9 @@ cd `dirname "$0"`
 # Sets some variables
 LOG_OPTS="-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog"
 SECURITY_OPTS="-Djava.security.auth.login.config=../conf/jaas.conf"
-EXO_OPTS="-Dexo.product.developing=false -Dexo.conf.dir=../gatein/conf"
+EXO_OPTS="-Dexo.product.developing=false -Dexo.conf.dir.name=gatein/conf"
 
-JAVA_OPTS="-Xms128m -Xmx512m $JAVA_OPTS $LOG_OPTS $SECURITY_OPTS $EXO_OPTS"
+JAVA_OPTS="-Xms128m -Xmx512m -XX:MaxPermSize=256m $JAVA_OPTS $LOG_OPTS $SECURITY_OPTS $EXO_OPTS"
 export JAVA_OPTS
 
 # Launches the server
